--- a/style.css
+++ b/style.css
@@ -23,3 +23,17 @@ body {
     box-shadow: none !important;
     stroke-width: 1 !important; /* Force la bordure normale */
   }
+
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+
+  #map {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+  }
